--- a/Proyecto/package.json
+++ b/Proyecto/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha src/test",
+    "test": "mocha src/test/*.js",
     "start": "node src/index.js",
     "dev": "nodemon src/index.js"
   },
@@ -24,5 +24,10 @@
     "redis": "^3.1.2",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.1.6"
+  },
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
+    "mocha": "^9.1.1"
   }
 }
