--- a/Proyecto/package.json
+++ b/Proyecto/package.json
@@ -8,6 +8,7 @@
     "start": "node src/index.js",
     "dev": "nodemon src/index.js"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
