--- a/Proyecto/src/.env
+++ b/Proyecto/src/.env
@@ -1,5 +1,5 @@
 PORT=3000
-SECRETPASSWORD=123456
+SECRETPASSWORD="123456"
 DBCONECCION=mongodb://localhost:27017/sprintProject2
 SALT_ROUNDS=10
 PORTREDIS=6379
